<resources>
    <string name="app_name">JKU App</string>
    <string name="title_kusss">KUSSS</string>
    <string name="title_calendar">Stundenplan</string>
    <string name="title_exams">Prüfungen</string>
    <string name="title_grades">Noten</string>
    <string name="title_lvas">LVAs</string>
    <string name="title_stats">Statistik</string>
    <string name="title_studies">Studienrichtung</string>
    <string name="title_campus">Campus</string>
    <string name="title_mensa">Mensa</string>
    <string name="title_map">Karte</string>
    <string name="title_oeh" translatable="false">ÖH</string>
    <string name="title_oeh_info">Info</string>
    <string name="title_oeh_rights">Rechte</string>
    <string name="title_oeh_news">News</string>
    <string name="title_oeh_linz" translatable="false">ÖH Linz</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_about">About</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_changelog">Change Log</string>
    <string name="action_settings_summary">Einstellungen von KUSSS, Benachrichtigungen, …</string>
    <string name="action_snap_to_location">Karte zur aktuellen GPS-Position bewegen</string>
    <string name="action_tap_to_login">zum Einloggen tippen</string>
    <string name="grade_1">Sehr gut</string>
    <string name="grade_2">Gut</string>
    <string name="grade_3">Befriedigend</string>
    <string name="grade_4">Genügend</string>
    <string name="grade_5">Nicht genügend</string>
    <string name="grade_get">Mit Erfolg teilgenommen</string>
    <string name="grade_gb">Bestanden</string>
    <string name="grade_gab">Mit Auszeichnung bestanden</string>
    <string name="grade_unknown">Nicht bewertet</string>
    <string name="grade_type_interim_ca">Vorläufige Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_final_ca">Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_recognized_cc">Sonstige Beurteilungen</string>
    <string name="grade_type_recognized_a">Anerkannte Beurteilungen</string>
    <string name="grade_type_recognized_exam">Anerkannte Prüfungen</string>
    <string name="grade_type_final_exam">Prüfungen</string>
    <string name="grade_type_unknown">TODO</string>
    <string name="grade_type_all">alle Beurteilungen</string>
    <string name="grade_type_none_available">keine Noten verfügbar</string>
    <string name="notification_sync_running">Daten werden synchronisiert</string>
    <string name="notification_sync_connect">Verbindung wird aufgebaut</string>
    <string name="notification_sync_calendar">Termine werden synchronisiert</string>
    <string name="notification_sync_calendar_loading">Termine werden geladen: %s</string>
    <string name="notification_sync_calendar_updating">Termine werden aktualisiert: %s</string>
    <string name="notification_sync_calendar_adding">Termine werden hinzugefügt: %s</string>
    <string name="notification_sync_calendar_saving">Termine werden gespeichert: %s</string>
    <string name="pref_cat_update_password">Passwort aktualisieren</string>
    <string name="pref_cat_kusss_main">KUSSS</string>
    <string name="pref_kusss_sync_interval_summary">Intervall in dem die Daten synchronisiert werden</string>
    <string name="pref_kusss_sync_interval_title">Synchronisationsintervall</string>
    <string name="pref_kusss_notify_title">Benachrichtigen</string>
    <string name="pref_cat_kusss_calendar">Stundenplan</string>
    <string name="pref_kusss_calendar_sync_summary">Termine vom aktuellen Semester aus KUSSS synchronisieren</string>
    <string name="pref_kusss_calendar_sync_title">Synchronisieren</string>
    <string name="pref_kusss_calendar_notify_summary">Benachrichtigen wenn sich Termine geändert haben</string>
    <string name="pref_kusss_calendar_extend_title">Kalender erweitern</string>
    <string name="pref_kusss_calendar_extend_summary">alle Termine werden in einen bestehenden Kalender importiert</string>
    <string name="pref_kusss_calendar_extended_title">Kalender</string>
    <string name="pref_kusss_calendar_extended_summary">der Kalender in den die Termine importiert werden</string>
    <string name="pref_cat_kusss_grade">Noten</string>
    <string name="pref_kusss_grade_notify_summary">Benachrichtigen wenn neue Noten vorhanden sind</string>
    <string name="pref_cat_kusss_exam">Prüfungen</string>
    <string name="pref_kusss_exam_notify_summary">Benachrichtigen wenn neue LVA-Prüfungen zu den eigenen LVAs verfügbar sind</string>
    <string name="pref_kusss_exam_get_from_lva_title">Prüfungen nach LVA-Nr laden</string>
    <string name="pref_kusss_exam_get_from_lva_summary">findet Prüfungen zu LVAs auch aus früheren Semestern, ist dafür aber langsamer …</string>
    <string name="pref_cat_app_main">App</string>
    <string name="pref_app_use_light_theme_title">helles Design verwenden</string>
    <string name="pref_app_use_light_theme_summary">Das Ändern dieser Einstellung startet die App beim Verlassen der Einstellungen neu</string>
    <string name="pref_cat_app_map">Karte</string>
    <string name="pref_app_map_file_title">eigene Kartendatei</string>
    <string name="pref_cat_stats">Statistik</string>
    <string name="pref_stats_use_lva_bar_chart_summary">Barchart für offene und erledigte LVAs verwenden</string>
    <string name="pref_stats_use_lva_bar_chart_title">Diagramme</string>
    <string name="pref_stats_positive_grades_only_summary">Notendurchschnitt nur mit positiven Noten berechnen</string>
    <string name="pref_stats_positive_grades_only_title">besserer Notendurchschnitt für LVAs</string>
    <string name="pref_cat_mensa">Mensa</string>
    <string name="pref_mensa_group_menu_by_day_title">nach Tag gruppieren</string>
    <string name="pref_mensa_group_menu_by_day_summary">Alle Menüs nach Tag gruppieren</string>
    <string name="pref_cat_tracking">Tracking</string>
    <string name="pref_tracking_errors_title">Fehler</string>
    <string name="pref_tracking_errors_summary">Fehler automatisch an Entwickler senden damit schneller darauf reagiert werden kann.</string>
    <string name="settings_kusss_title">KUSSS</string>
    <string name="settings_kusss_summary">Einstellungen für KUSSS</string>
    <string name="settings_app_title">App</string>
    <string name="settings_app_summary">Einstellungen für App</string>
    <string name="settings_timetable_title">Kalender</string>
    <string name="settings_timetable_summary">Einstellungen für verwendete Kalender und Stundenplan</string>
    <string name="oeh_info_main_title" translatable="false">Deine ÖH</string>
    <string name="oeh_info_main_summary" translatable="false">Die Österreichische Hochschülerinnen- und Hochschülerschaft ist die gesetzliche Vertretung aller Studierenden. Sie gliedert sich bundesweit in die ÖH-Bundesvertretung (<a href="http://www.oeh.ac.at/">http://www.oeh.ac.at/</a>), in die Universitätsvertretungen an den einzelnen Universitäten, wie beispielsweise die HochschülerInnenschaft an der Johannes Kepler Universität Linz (<a href="http://oeh.jku.at/">http://oeh.jku.at</a>).(</string>
    <string name="oeh_info_jku_title" translatable="false">Deine ÖH an der JKU</string>
    <string name="oeh_info_jku_summary" translatable="false">An der Johannes Kepler Universität besteht die ÖH aus der Universitätsvertretung, den zugeordneten Referaten, wie beispielsweise dem ÖH Sozialreferat, den Fakultätsvertretungen und den Studienvertretungen. Unsere Aufgabenfelder sind Beratung, Information, Service und Vertretung. In diesem Sinne stehen wir dir bei Problemen im Studium mit Rat und Tat zur Seite, informieren dich über aktuelle Ereignisse an der Universität und vertreten die Studierenden in den Gremien der Universität.</string>
    <string name="oeh_info_contact_title" translatable="false">Kontakt</string>
    <string name="oeh_info_contact_summary" translatable="false">Wenn du Fragen und Anregungen hast, kannst du dich jederzeit unter <a href="mailto:oeh@oeh.jku.at">oeh@oeh.jku.at</a> an uns wenden!</string>
    <string name="oeh_rights_1_title" translatable="false">Deine Rechte und Pflichten</string>
    <string name="oeh_rights_1_summary" translatable="false">Studierende an der JKU haben bestimmte Rechte und Pflichten. Das Studienrecht ist im Universitätsgesetz (UG 2002) und in der Satzung der JKU (Studienrecht) geregelt.</string>
    <string name="oeh_rights_2_title" translatable="false">Was passiert wenn ich beim Schummeln erwischt werde?</string>
    <string name="oeh_rights_2_summary" translatable="false">Wenn du unerlaubte Hilfsmittel benützt, wird deine Prüfung für ungültig erklärt und auf deine Antrittsmöglichkeiten angerechnet. Das bedeutet, dass du dadurch einen Antritt verspielen kannst.</string>
    <string name="oeh_rights_3_title" translatable="false">Wie lange darf ich in schriftliche Klausuren Einsicht nehmen?</string>
    <string name="oeh_rights_3_summary" translatable="false">Du hast das Recht innerhalb von sechs Monaten nach Ablegung einer Prüfung in deine Arbeit Einsicht zu nehmen. Weiters darfst du jede von dir abgelegte Prüfung inkl. Beurteilungsunterlagen und Prüfungsprotokolle kopieren (außer bei Multiple-Choice Klausuren).</string>
    <string name="oeh_rights_4_title" translatable="false">Ist die Festlegung einer höheren Mindestpunktezahl als 50% bei Klausuren zulässig?</string>
    <string name="oeh_rights_4_summary" translatable="false">Ja. Grundsätzlich obliegt es dem/der LVA-LeiterIn den Schwierigkeitsgrad und die Mindestanforderungen für eine positive Absolvierung festzulegen, sofern im Studienplan keine abweichenden Bestimmungen enthalten sind.</string>
    <string name="oeh_rights_5_title" translatable="false">Wie oft darf ich eine LVA wiederholen?</string>
    <string name="oeh_rights_5_summary" translatable="false">Bei allen Prüfungen hast du 4 Wiederholungen, d.h. insgesamt 5 Antritte. Prüfungstechnisch gibt es zwei unterschiedliche Kursformen. Einerseits solche mit "immanentem Prüfungscharakter", d.h. die Note setzt sich aus mehreren Leistungsprüfungen wie z.B. Hausübungen zusammen. Hier kannst du ab der dritten Wiederholung eine kommissionelle Prüfung verlangen; dein Antrag muss vom Vizerektor für Lehre genehmigt werden. Bei allen anderen LVAs und Fachprüfungen muss ab der dritten Wiederholung eine kommissionelle Prüfung abgehalten werden. Kommissionelle Prüfungen sind vom Modus her meist gleich, werden aber von mehreren ProfessorInnen beurteilt. Bei positiven Prüfungen ist eine Wiederholung innerhalb von 6 Monaten möglich, wenn du eine bessere Note haben willst.</string>
    <string name="oeh_rights_6_title" translatable="false">Links</string>
    <string name="oeh_rights_6_summary" translatable="false"><a href="http://www.jku.at/content/e262/e239/e3257">Detaillierte Informationen zum Studienrecht der JKU</a>\n\n<a href="http://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&amp;Gesetzesnummer=20002128">Das Universitätsgesetz</a></string>
    <string name="map_search_poi_title">Suche</string>
    <string name="map_search_poi_hint">Hörsaal hier eingeben</string>
    <string name="mensa_title_classic" translatable="false">Classic</string>
    <string name="mensa_title_choice" translatable="false">Choice</string>
    <string name="mensa_title_khg" translatable="false">KHG</string>
    <string name="mensa_title_raab" translatable="false">Raab</string>
    <string name="extension_mensa_pref_visible_always">immer Anzeigen</string>
    <string name="extension_mensa_pref_visible_from">von</string>
    <string name="extension_mensa_pref_visible_to">bis</string>
    <string name="extension_mensa_pref_cat_visibility">Anzeige</string>
    <string name="extension_mensa_pref_cat_mensa">Mensa</string>
    <string name="calendar_title_exam">Prüfungen</string>
    <string name="calendar_title_lva">LVAs</string>
    <string name="title_curricula">Studienrichtungen</string>
</resources>