<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/extension_mensa_pref_cat_visibility" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="pref_key_dashclock_ext_mensa_always"
            android:title="@string/extension_mensa_pref_visible_always" />

        <org.voidsink.anewjkuapp.base.TimePreference
            android:defaultValue="32400000"
            android:dependency="pref_key_dashclock_ext_mensa_always"
            android:key="pref_key_dashclock_ext_mensa_from"
            android:title="@string/extension_mensa_pref_visible_from" />
        <org.voidsink.anewjkuapp.base.TimePreference
            android:defaultValue="46800000"
            android:dependency="pref_key_dashclock_ext_mensa_always"
            android:key="pref_key_dashclock_ext_mensa_to"
            android:title="@string/extension_mensa_pref_visible_to" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/extension_mensa_pref_cat_mensa" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_dashclock_ext_mensa_classic"
            android:title="@string/mensa_title_classic" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_dashclock_ext_mensa_choice"
            android:title="@string/mensa_title_choice" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_dashclock_ext_mensa_khg"
            android:title="@string/mensa_title_khg" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_dashclock_ext_mensa_raab"
            android:title="@string/mensa_title_raab" />
    </PreferenceCategory>

</PreferenceScreen>