<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/oeh_rights_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_1_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_1_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_1_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/oeh_rights_2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_2_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_2_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_2_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/oeh_rights_3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_3_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_3_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_3_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/oeh_rights_4_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_4_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_4_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_4_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/oeh_rights_5_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_5_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_5_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_5_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/oeh_rights_6_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_6_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/oeh_rights_6_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/oeh_rights_6_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>