<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_settings" >

    <!--
    <header
        android:fragment="org.voidsink.anewjkuapp.fragment.SettingsFragment$SyncSettingsFragment"
        android:summary="@string/settings_kusss_summary"
        android:title="@string/settings_kusss_title" >
    </header>


    -->

    <header
        android:fragment="org.voidsink.anewjkuapp.fragment.SettingsFragment$KusssSettingsFragment"
        android:summary="@string/settings_kusss_summary"
        android:title="@string/settings_kusss_title" >

        <!--
             Arbitrary key/value pairs can be included with a header as
             arguments to its fragment.
             
        <extra
            android:name="someKey"
            android:value="someHeaderValue" />

        -->
    </header>
    <header
        android:fragment="org.voidsink.anewjkuapp.fragment.SettingsFragment$AppSettingsFragment"
        android:summary="@string/settings_app_summary"
        android:title="@string/settings_app_title" >

        <!--
             Arbitrary key/value pairs can be included with a header as
             arguments to its fragment.
             
        <extra
            android:name="someKey"
            android:value="someHeaderValue" />

        -->
    </header>

</preference-headers>